# deep-folder-backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD.md  SPEC.md  UBIQUITOUS_LANGUAGE.md  alembic.ini  fly.toml  package-lock.json  package.json  pyproject.toml  todo.md
.claude/skills/optimize-loader/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
.sandcastle/: Dockerfile  implement-prompt.md  main.mts  merge-prompt.md  plan-prompt.md
alembic/: env.py
alembic/versions/: 0001_baseline_pgvector.py  0002_users_table.py  0003_folders_table.py  0004_conversations_table.py  0005_messages_table.py  0006_jobs_table.py  0007_files_table.py  0008_skipped_files_table.py  0009_chunks_table.py  0010_add_embedding_column.py  0011_usage_table.py  0012_add_router_label.py  0012_traces_table.py  0013_traces_table.py  0014_add_router_label.py  001_baseline.py  043b83208f13_merge_0010_0011_add_search_vector_.py
scripts/: run_scheduler.py  run_worker.py
src/app/: config.py  database.py  main.py
src/deepfolder/: __init__.py  chunker.py  citation_builder.py  config.py  db.py  drive_client.py  embedding_client.py  extractors.py  hybrid_search.py  job_queue.py  llm_client.py  logging_config.py  main.py  middleware.py  query_router.py  sentry.py  trace_logger.py  usage_tracker.py
src/deepfolder/api/: auth.py  conversations.py  folders.py  health.py  usage.py
src/deepfolder/auth/: dependencies.py  session.py  token_vault.py
src/deepfolder/jobs/: logger.py
src/deepfolder/models/: __init__.py  chunk.py  conversation.py  file.py  folder.py  job.py  skipped_file.py  trace.py  usage.py  user.py
src/deepfolder/services/: agent_orchestrator.py  job_handlers.py  job_queue.py
tests/: conftest.py  test_smoke.py
tests/fixture/: google_folder.py
tests/integration/: conftest.py  test_google_folder_fixture.py  test_job_queue_e2e.py
tests/unit/: test_agent_orchestrator.py  test_auth_routes.py  test_chunker.py  test_citation_builder.py  test_conversations.py  test_drive_client.py  test_embedding_client.py  test_folder_routes.py  test_health.py  test_hybrid_search.py  test_job_logger.py  test_job_queue.py  test_logging_config.py  test_middleware.py  test_office_chunker.py  test_office_extractors.py  test_query_router.py  test_sentry.py  test_token_vault.py  test_trace_logger.py  test_traces_replay.py  test_usage_routes.py  test_usage_tracker.py
