[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-folder-backend"
version = "0.1.0"
description = "Backend service for querying Google Drive folders with AI"
requires-python = "==3.12.*"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.32.0",
  "pydantic==2.7.0",
  "pydantic-settings==2.2.0",
  "sqlalchemy==2.0.25",
  "alembic==1.13.1",
  "psycopg==3.1.14",
  "httpx==0.26.0",
  "tenacity==8.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.4",
  "pytest-asyncio==0.23.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { where = ["src"] }
